--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-black px-4 ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-black px-4 fixed-top">
   <a class="navbar-brand fw-bold text-warning" routerLink="/">My Portfolio</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
