--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -5,7 +5,7 @@
 
       <!-- Project 1: Bab Al-Hara -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card">
+        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card "data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1481833761820-0509d3217039?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHJlc3RhdXJhbnR8ZW58MHx8MHx8fDA%3D" class="card-img-top rounded-top" alt="Bab Al-Hara Restaurant">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -29,7 +29,7 @@
 
       <!-- Project 2: Maldives Website -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card">
+        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card"data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1503125210483-8b1d12bccdbe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fG1hbGRpdmVzfGVufDB8fDB8fHww" class="card-img-top rounded-top" alt="Maldives Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -53,7 +53,7 @@
 
       <!-- Project 3: Perfume Project -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card">
+        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGVyZnVtfGVufDB8fDB8fHww" class="card-img-top rounded-top" alt="Perfume Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
