--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -19,7 +19,7 @@
                 <strong>Electronics, Communications & Computer Engineering</strong>.
               </p>
               <p class="fs-5 text-light">
-               I'm a motivated software engineer who blends academic knowledge in Communication & Computer Engineering with hands-on experience in software and web development. I specialize in building efficient systems using C/C++, creating graphical applications with Java AWT, and designing responsive websites with HTML, CSS, JavaScript, and Bootstrap. I'm continuously learning new technologies like ReactJS. I focus on clean code, timely delivery, and clear communication to ensure high-quality results that exceed client expectations
+               I'm a motivated software engineer who blends academic knowledge in Communication & Computer Engineering with hands-on experience in software and web development. I specialize in building efficient systems using C/C++, creating graphical applications with Java AWT, and designing responsive websites with HTML, CSS, JavaScript, and Bootstrap. I'm continuously learning new technologies like ReactJS and Angular. I focus on clean code, timely delivery, and clear communication to ensure high-quality results that exceed client expectations
               </p>
 
               <div class="mt-3">
