--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -31,6 +31,7 @@
                   <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">JavaScript</li>
                   <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">TypeScript</li>
                   <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">Angular</li>
+                  <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">ReactJS</li>
                 </ul>
               </div>
             </div>
