--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,4 +1,4 @@
-<div class="container-fluid py-5 px-4 bg-dark">
+<div class="container-fluid py-5 px-4 ">
   <div class="row justify-content-center align-items-center w-100" data-aos="zoom-in">
     <div class="col-lg-10">
       <div class="card shadow-lg border-0 bg-black text-light rounded-4 p-4">
@@ -49,3 +49,4 @@
     </div>
   </div>
 </div>
+
