--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,4 +1,4 @@
-<section id="contact" class="bg-dark text-light d-flex align-items-center" style="min-height: 100vh;">
+<section id="contact" class="text-light d-flex align-items-center" style="min-height: 100vh;">
   <div class="container py-5" data-aos="zoom-in">
     <h2 class="text-warning mb-4 text-center fw-bold">Contact Me</h2>
     <p class="text-center mb-5 fs-5">
@@ -43,3 +43,4 @@
     </div>
   </div>
 </section>
+
