--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -1,4 +1,4 @@
-<section id="projects" class="py-5 bg-dark text-light">
+<section id="projects" class="py-5  text-light">
   <div class="container" data-aos="fade-up">
     <h2 class="text-center mb-5 text-warning fw-bold">My Projects</h2>
     <div class="row justify-content-center g-4">
@@ -78,3 +78,4 @@
     </div>
   </div>
 </section>
+
