--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -75,7 +75,86 @@
         </div>
       </div>
 
+
+      <!-- Project 4: X-O Project -->
+      <div class="col-md-5">
+        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+          <img src="https://images.unsplash.com/photo-1699039506677-61d9b15dfa60?q=80&w=627&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
+          <div class="card-body p-4 d-flex flex-column justify-content-between">
+            <div>
+              <h4 class="card-title text-warning mb-2">X-O Game</h4>
+              <p class="card-text mb-2">
+                X-O Game is a simple yet interactive Tic-Tac-Toe web application built using Angular.
+              </p>
+              <p class="mb-2"><strong>Technologies:</strong> Angular,CSS</p>
+            </div>
+            <div class="mt-3 d-flex justify-content-between align-items-center">
+              <a href="https://x-o-game-swart.vercel.app/" target="_blank" class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
+                <i class="bi bi-box-arrow-up-right"></i> View Demo
+              </a>
+              <a href="https://github.com/Ahmedshreif-code/X-O-Game.git" target="_blank" class="btn btn-outline-light px-4 d-flex align-items-center gap-1">
+                <i class="bi bi-github"></i> GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <!-- Project 5: Dynamic-list Project -->
+      <div class="col-md-5">
+        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+          <img src="https://plus.unsplash.com/premium_photo-1681487857509-abb58345e594?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
+          <div class="card-body p-4 d-flex flex-column justify-content-between">
+            <div>
+              <h4 class="card-title text-warning mb-2">Dynamic-list Project</h4>
+              <p class="card-text mb-2">
+               Dynamic List Filter is a responsive web application built with Angular, designed to allow users to dynamically search and filter items from a list in real time.
+              </p>
+              <p class="mb-2"><strong>Technologies:</strong> Angular, CSS, Bootstrap</p>
+            </div>
+            <div class="mt-3 d-flex justify-content-between align-items-center">
+              <a href="https://dynamic-list-one.vercel.app" target="_blank" class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
+                <i class="bi bi-box-arrow-up-right"></i> View Demo
+              </a>
+              <a href="https://github.com/Ahmedshreif-code/Dynamic-list.git" target="_blank" class="btn btn-outline-light px-4 d-flex align-items-center gap-1">
+                <i class="bi bi-github"></i> GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+       <!-- Project 6: Simple To-Do-list Project -->
+      <div class="col-md-5">
+        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+          <img src="https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?q=80&w=1172&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
+          <div class="card-body p-4 d-flex flex-column justify-content-between">
+            <div>
+              <h4 class="card-title text-warning mb-2">Simple To-Do-list Project</h4>
+              <p class="card-text mb-2">
+                Simple To-Do List is a lightweight task management application built with Angular, designed to help users organize their daily tasks efficiently.                 </p>
+              <p class="mb-2"><strong>Technologies:</strong> Angular, CSS, Bootstrap</p>
+            </div>
+            <div class="mt-3 d-flex justify-content-between align-items-center">
+              <a href="https://simple-to-do-list-pied.vercel.app" target="_blank" class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
+                <i class="bi bi-box-arrow-up-right"></i> View Demo
+              </a>
+              <a href="https://github.com/Ahmedshreif-code/simple-To-do-list.git" target="_blank" class="btn btn-outline-light px-4 d-flex align-items-center gap-1">
+                <i class="bi bi-github"></i> GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </section>
+
 
