--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -152,9 +152,35 @@
         </div>
       </div>
 
+    <!-- Project 7: Guess-the-number-Game-->
+    <div class="col-md-5">
+            <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+              <img src="https://images.unsplash.com/photo-1724120932030-d8210a77deed?q=80&w=1315&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
+              <div class="card-body p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <h4 class="card-title text-warning mb-2">Guess-the-number-Game</h4>
+                  <p class="card-text mb-2">
+                  The Guess the Number Game is a simple yet fun number-guessing game built with Angular.
+                  The computer randomly generates a secret number between 1 and 100, and the player has to guess it within a limited number of attempts.              <p class="mb-2"><strong>Technologies:</strong> Angular, CSS, Bootstrap</p>
+                </div>
+                <div class="mt-3 d-flex justify-content-between align-items-center">
+                  <a href="https://guess-the-number-game-ten-theta.vercel.app/" target="_blank" class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
+                    <i class="bi bi-box-arrow-up-right"></i> View Demo
+                  </a>
+                  <a href="https://github.com/Ahmedshreif-code/Guess-the-number-Game.git" target="_blank" class="btn btn-outline-light px-4 d-flex align-items-center gap-1">
+                    <i class="bi bi-github"></i> GitHub
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+      
 
     </div>
   </div>
 </section>
+
 
 
