--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,5 +1,5 @@
 <div class="container-fluid py-5 px-4 ">
-  <div class="row justify-content-center align-items-center w-100" data-aos="zoom-in">
+  <div class="row justify-content-center align-items-center w-100" data-aos="fade-up">
     <div class="col-lg-10">
       <div class="card shadow-lg border-0 bg-black text-light rounded-4 p-4">
 
@@ -19,7 +19,7 @@
                 <strong>Electronics, Communications & Computer Engineering</strong>.
               </p>
               <p class="fs-5 text-light">
-               I'm a motivated software engineer who blends academic knowledge in Communication & Computer Engineering with hands-on experience in software and web development. I specialize in building efficient systems using C/C++, creating graphical applications with Java AWT, and designing responsive websites with HTML, CSS, JavaScript, and Bootstrap. I'm continuously learning new technologies like ReactJS and Angular. I focus on clean code, timely delivery, and clear communication to ensure high-quality results that exceed client expectations
+               I'm a motivated software engineer who blends academic knowledge in Communication & Computer Engineering with hands-on experience in software and web development. I specialize in building efficient systems using C/C++, creating graphical applications with Java AWT, and designing responsive websites with HTML, CSS, JavaScript, and Bootstrap. I'm continuously learning new technologies like ReactJS. I focus on clean code, timely delivery, and clear communication to ensure high-quality results that exceed client expectations
               </p>
 
               <div class="mt-3">
@@ -31,7 +31,6 @@
                   <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">JavaScript</li>
                   <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">TypeScript</li>
                   <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">Angular</li>
-                  <li class="list-inline-item badge bg-warning text-dark m-1 px-3 py-2">ReactJS</li>
                 </ul>
               </div>
             </div>
@@ -49,4 +48,5 @@
     </div>
   </div>
 </div>
+
 
