--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -5,9 +5,9 @@
 
         <div class="row align-items-center">
           <div class="col-lg-4 text-center mb-4 mb-lg-0">
-            <img src="https://plus.unsplash.com/premium_photo-1669703777437-27602d656c27?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+            <img src="https://res.cloudinary.com/dbjfuwvlu/image/upload/v1755428218/WhatsApp_Image_2025-07-28_at_12.13.17_c311d101-removebg-preview_ydjlez.png"
                  alt="Ahmed Shreif"
-                 class="img-fluid rounded-circle border border-4 border-warning shadow"
+                 class="img-fluid rounded-circle shadow floating"
                  style="width: 250px;">
           </div>
           <div class="col-lg-8 d-flex flex-column justify-content-between">
