--- a/src/app/pages/about/about.css
+++ b/src/app/pages/about/about.css
@@ -15,13 +15,7 @@
 }
 
 
-img {
-  transition: transform 0.3s ease-in-out;
-}
 
-img:hover {
-  transform: scale(1.07);
-}
 
 
 h1, h4 {
@@ -37,6 +31,7 @@ p {
   background-color: #fdd835;
   color: #000;
 }
+
 .list-inline-item {
   transition: all 0.3s ease-in-out;
   cursor: pointer;
@@ -62,5 +57,13 @@ p {
   80% { transform: translateY(2px); }
   100% { transform: translateY(0); }
 }
+.floating {
+  animation: floatUpDown 3s ease-in-out infinite;
+}
 
+@keyframes floatUpDown {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
+  100% { transform: translateY(0); }
+}
 
