--- a/src/app/pages/projects/projects.html
+++ b/src/app/pages/projects/projects.html
@@ -5,7 +5,7 @@
 
       <!-- Project 1: Bab Al-Hara -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card "data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-lg border-0 h-100  text-light project-card "data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1481833761820-0509d3217039?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHJlc3RhdXJhbnR8ZW58MHx8MHx8fDA%3D" class="card-img-top rounded-top" alt="Bab Al-Hara Restaurant">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -29,7 +29,7 @@
 
       <!-- Project 2: Maldives Website -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card"data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-lg border-0 h-100  text-light project-card"data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1503125210483-8b1d12bccdbe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fG1hbGRpdmVzfGVufDB8fDB8fHww" class="card-img-top rounded-top" alt="Maldives Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -53,7 +53,7 @@
 
       <!-- Project 3: Perfume Project -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-lg border-0 h-100  text-light project-card" data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGVyZnVtfGVufDB8fDB8fHww" class="card-img-top rounded-top" alt="Perfume Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -76,9 +76,9 @@
       </div>
 
 
-      <!-- Project 4: X-O Project -->
+         <!-- Project 4: X-O Project -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-lg border-0 h-100  text-light project-card" data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1699039506677-61d9b15dfa60?q=80&w=627&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -104,7 +104,7 @@
 
       <!-- Project 5: Dynamic-list Project -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-lg border-0 h-100  text-light project-card" data-aos="fade-up" data-aos-delay="100">
           <img src="https://plus.unsplash.com/premium_photo-1681487857509-abb58345e594?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -131,7 +131,7 @@
 
        <!-- Project 6: Simple To-Do-list Project -->
       <div class="col-md-5">
-        <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
+        <div class="card shadow-lg border-0 h-100  text-light project-card" data-aos="fade-up" data-aos-delay="100">
           <img src="https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?q=80&w=1172&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
           <div class="card-body p-4 d-flex flex-column justify-content-between">
             <div>
@@ -152,35 +152,34 @@
         </div>
       </div>
 
-    <!-- Project 7: Guess-the-number-Game-->
-    <div class="col-md-5">
-            <div class="card shadow-lg border-0 h-100 bg-black text-light project-card" data-aos="fade-up" data-aos-delay="100">
-              <img src="https://images.unsplash.com/photo-1724120932030-d8210a77deed?q=80&w=1315&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
-              <div class="card-body p-4 d-flex flex-column justify-content-between">
-                <div>
-                  <h4 class="card-title text-warning mb-2">Guess-the-number-Game</h4>
-                  <p class="card-text mb-2">
-                  The Guess the Number Game is a simple yet fun number-guessing game built with Angular.
-                  The computer randomly generates a secret number between 1 and 100, and the player has to guess it within a limited number of attempts.              <p class="mb-2"><strong>Technologies:</strong> Angular, CSS, Bootstrap</p>
-                </div>
-                <div class="mt-3 d-flex justify-content-between align-items-center">
-                  <a href="https://guess-the-number-game-ten-theta.vercel.app/" target="_blank" class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
-                    <i class="bi bi-box-arrow-up-right"></i> View Demo
-                  </a>
-                  <a href="https://github.com/Ahmedshreif-code/Guess-the-number-Game.git" target="_blank" class="btn btn-outline-light px-4 d-flex align-items-center gap-1">
-                    <i class="bi bi-github"></i> GitHub
-                  </a>
-                </div>
-              </div>
+
+      <!-- Project 7: Guess-the-number-Game-->
+      <div class="col-md-5">
+        <div class="card shadow-lg border-0 h-100  text-light project-card" data-aos="fade-up" data-aos-delay="100">
+          <img src="https://images.unsplash.com/photo-1724120932030-d8210a77deed?q=80&w=1315&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top rounded-top" alt="Perfume Project">
+          <div class="card-body p-4 d-flex flex-column justify-content-between">
+            <div>
+              <h4 class="card-title text-warning mb-2">Guess-the-number-Game</h4>
+              <p class="card-text mb-2">
+              The Guess the Number Game is a simple yet fun number-guessing game built with Angular.
+              The computer randomly generates a secret number between 1 and 100, and the player has to guess it within a limited number of attempts.              <p class="mb-2"><strong>Technologies:</strong> Angular, CSS, Bootstrap</p>
+            </div>
+            <div class="mt-3 d-flex justify-content-between align-items-center">
+              <a href="https://guess-the-number-game-ten-theta.vercel.app/" target="_blank" class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
+                <i class="bi bi-box-arrow-up-right"></i> View Demo
+              </a>
+              <a href="https://github.com/Ahmedshreif-code/Guess-the-number-Game.git" target="_blank" class="btn btn-outline-light px-4 d-flex align-items-center gap-1">
+                <i class="bi bi-github"></i> GitHub
+              </a>
             </div>
           </div>
+        </div>
+      </div>
 
 
-      
+
+
 
     </div>
   </div>
 </section>
-
-
-
