--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,7 +1,7 @@
 <div class="container-fluid py-5 px-4 ">
   <div class="row justify-content-center align-items-center w-100" data-aos="fade-up">
     <div class="col-lg-10">
-      <div class="card shadow-lg border-0 bg-black text-light rounded-4 p-4">
+      <div class="card shadow-lg border-0  text-light rounded-4 p-4 glass-card">
 
         <div class="row align-items-center">
           <div class="col-lg-4 text-center mb-4 mb-lg-0">
@@ -38,7 +38,7 @@
             </div>
 
             <div class="mt-4 d-flex justify-content-start">
-              <a href="/protfolio/src/assets/ahmed cv.pdf" download class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
+              <a href="https://drive.google.com/file/d/18QuE5d0bq0GODoyBDNcUUslhgij8aPDa/view?usp=sharing" download class="btn btn-warning d-inline-flex align-items-center gap-2 px-4 py-2 fw-semibold">
                 <i class="bi bi-download"></i> Download CV
               </a>
             </div>
@@ -50,8 +50,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
