--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -5,7 +5,7 @@
 
         <div class="row align-items-center">
           <div class="col-lg-4 text-center mb-4 mb-lg-0">
-            <img src="https://res.cloudinary.com/dbjfuwvlu/image/upload/v1756034244/WhatsApp_Image_2025-08-24_at_14.11.51_81f13a01-removebg-preview_t9vo6d.png"
+            <img src="https://res.cloudinary.com/dbjfuwvlu/image/upload/v1758380043/Result_x2bntb.png"
                  alt="Ahmed Shreif"
                  class="img-fluid rounded-circle shadow floating"
                  style="width: 400px;">
@@ -50,6 +50,7 @@
     </div>
   </div>
 </div>
+
 
 
 
